[metadata]
name = plover-unused-xtest-output
version = 0.0.0
author = user202729
description = Output plugin for Plover, only use unused key codes in xtest to avoid conflict.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-unused-xtest-output
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_unused_xtest_output

[options.entry_points]
plover.output =
	XTEST (unused keycodes only) = plover_unused_xtest_output:KeyboardEmulation
